--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,15 @@ description = "Template para projetos FastAPI"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-    "fastapi>=0.103.0",
+    "fastapi[standard]>=0.103.0",
     "sqlalchemy>=2.0.0",
     "alembic",
     "pydantic-settings>=2.0.0",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
     "python-multipart>=0.0.5",
+    "psycopg2-binary>=2.9.10",
+    "uvicorn>=0.33.0",
 ]
 
 [project.optional-dependencies]
